# inventory-api

./: .gitignore  LICENSE.txt  README.md  main.py  prefixes.py  pyproject.toml
app/: database.py  main.py
app2/: main.py
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/constants/: __init__.py  database.py  inventory_item.py  order.py  order_item.py  pagination.py  product.py  supplier.py
backend/app/models/: __init__.py  inventory_item.py  order.py  order_item.py  product.py  supplier.py
backend/app/routes/: __init__.py  inventory_item.py  order.py  product.py  supplier.py
backend/app/schemas/: __init__.py  inventory_item.py  order.py  order_item.py  product.py  response.py  supplier.py
backend/app/services/: __init__.py  inventory_item.py  order.py  order_item.py  product.py  supplier.py
backend/app/utils/: __init__.py  datetime.py  inventory_item.py  order.py  order_item.py  product.py
backend/app/validation/: __init__.py  inventory_item.py  order.py  product.py  supplier.py
backend/tests/: __init__.py  test_main.py
backend/tests/test_services/: test_order_item_services.py  test_order_services.py  test_product_services.py  test_supplier_services.py
backend/tests/test_utils/: test_order_utils.py
backend/tests/test_validation/: test_order_validation.py
frontend/: eslint.config.mjs  package.json
models/: suppliers.py
product/: models.py  routes.py
routes/: suppliers.py
schemas/: suppliers.py
scripts/: run_app.bat  run_client.bat  run_server.bat
supplier/: models.py  routes.py  schemas.py  validation.py
(+319 files in other folders)
