[project]
name = "inventory-api"
version = "0.1.0"
description = "A backend API for managing product inventory, suppliers, and stock levels."
authors = [
    {name = "mrdsx"}
]
license = {file = "../LICENSE.txt"}
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "inventory-api"
packages = [
    { include = "app" },
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "app",
]